# PowerTunerClient

./: .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml
.github/workflows/: build_test.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Classes/: ClientSettings.cpp  ClientSettings.h
src/Include/: Daemon.h
src/Resources/: resources.qrc  version.h.in
src/Resources/Windows/: win.rc.in
src/Tabs/: TabUtils.cpp  TabUtils.h
src/Tabs/Daemons/: DaemonsTab.cpp  DaemonsTab.h
src/Tabs/Daemons/Widgets/: DaemonBox.cpp  DaemonBox.h  DaemonBoxContainer.cpp  DaemonBoxContainer.h
src/Tabs/Daemons/Widgets/DaemonOptions/: ActionsTab.cpp  ActionsTab.h  AddDaemonTab.cpp  AddDaemonTab.h  DaemonOptions.cpp  DaemonOptions.h  DaemonSettingsTab.cpp  DaemonSettingsTab.h
src/Tabs/FanControl/: FanControlTab.cpp  FanControlTab.h
src/Tabs/FanControl/Widgets/: FanControlGBox.cpp  FanControlGBox.h  FanCurveWidget.cpp  FanCurveWidget.h
src/Tabs/Home/: HomeTab.cpp  HomeTab.h
src/Tabs/Home/Widgets/: CPUInfoGBox.cpp  CPUInfoGBox.h  ClientSettingsWidget.cpp  ClientSettingsWidget.h  GPUInfoGBox.cpp  GPUInfoGBox.h  LabelInfoWidget.cpp  LabelInfoWidget.h  PowerTunerGBox.cpp  PowerTunerGBox.h  SystemInfoGBox.cpp  SystemInfoGBox.h
src/Tabs/Include/: AddonTab.h  GridWidget.h  ScrollableTab.h
src/Tabs/Log/: LogTab.cpp  LogTab.h
src/Tabs/OS/Linux/AMDGPU/: AMDGPUTab.cpp  AMDGPUTab.h
src/Tabs/OS/Linux/AMDGPU/Widgets/: DPMForcePerformanceLevelGBox.cpp  DPMForcePerformanceLevelGBox.h  EngineClockSCLKGBox.cpp  EngineClockSCLKGBox.h  PowerDPMStateGBox.cpp  PowerDPMStateGBox.h
src/Tabs/OS/Linux/IntelGPU/: IntelGPUTab.cpp  IntelGPUTab.h
src/Tabs/OS/Linux/IntelGPU/Widgets/: GPUBoostGBox.cpp  GPUBoostGBox.h  GPUFrequencyGBox.cpp  GPUFrequencyGBox.h
src/Tabs/OS/Linux/SysFs/: SysFsTab.cpp  SysFsTab.h
src/Tabs/OS/Linux/SysFs/Widgets/: BlockQueueSchedulerGBox.cpp  BlockQueueSchedulerGBox.h  CPUFrequencyGBox.cpp  CPUFrequencyGBox.h  CPUIdleGovernorGBox.cpp  CPUIdleGovernorGBox.h  CPUParkGBox.cpp  CPUParkGBox.h  CPUParkWidget.cpp  CPUParkWidget.h  CPUSMTGBox.cpp  CPUSMTGBox.h  CPUScalingGovernorGBox.cpp  CPUScalingGovernorGBox.h  CPUScalingGovernorWidget.cpp  CPUScalingGovernorWidget.h  MiscPowerManagementGBox.cpp  MiscPowerManagementGBox.h
src/Tabs/OS/Linux/SysFs/Widgets/AMD/: AMDPStateGBox.cpp  AMDPStateGBox.h  EPPWidget.cpp  EPPWidget.h
src/Tabs/OS/Linux/SysFs/Widgets/Include/: BlockQueueSchedulerWidget.cpp  BlockQueueSchedulerWidget.h  MiscPowerManagementWidget.cpp  MiscPowerManagementWidget.h
src/Tabs/OS/Windows/PowerScheme/: PowerSchemeTab.cpp  PowerSchemeTab.h
src/Tabs/OS/Windows/PowerScheme/Include/: MinMaxSliderGBox.cpp  MinMaxSliderGBox.h  OptionsGBox.cpp  OptionsGBox.h  PowerSettingGBox.cpp  PowerSettingGBox.h
src/Tabs/OS/Windows/PowerScheme/Widgets/: SchemeSelectInput.cpp  SchemeSelectInput.h  SchemeSettingsWidget.cpp  SchemeSettingsWidget.h  SchemesOptionsWidget.cpp  SchemesOptionsWidget.h
src/Tabs/OS/Windows/PowerScheme/Widgets/SchemeOptionsWidgets/: CopySchemeSettingsGBox.cpp  CopySchemeSettingsGBox.h  DuplicateSchemeGBox.cpp  DuplicateSchemeGBox.h  MiscGlobalOptionsGBox.cpp  MiscGlobalOptionsGBox.h  SchemeActionsGBox.cpp  SchemeActionsGBox.h
src/Tabs/Widgets/: BaseSliderWidget.cpp  BaseSliderWidget.h  SliderLevelsWidget.cpp  SliderLevelsWidget.h  SliderUnitWidget.cpp  SliderUnitWidget.h  SliderWidget.cpp  SliderWidget.h
src/Widgets/: ProfileActions.cpp  ProfileActions.h  StatusBar.cpp  StatusBar.h  TrayIcon.cpp  TrayIcon.h  UIActions.cpp  UIActions.h
